k8s-local/networkpolicies/database/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: database   
spec:
  podSelector: {}      
  policyTypes:
    - Ingress
    - Egress
